--- a/css/style.css
+++ b/css/style.css
@@ -448,11 +448,10 @@ h1, h2, h3, h4, h5, h6 {
 .svg-animation {
   position: absolute;
   background-color: transparent;
-  top: auto;
+  top: 100px;
   width: 100%;
   height: 100%;
-  bottom: auto;
-  right: -50%;
+  right: -44%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -461,7 +460,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 1441px) {
   .svg-animation {
-    right: -40%;
+    right: -35%;
   }
 }
 @media (max-width: 1280px) {
@@ -481,26 +480,142 @@ h1, h2, h3, h4, h5, h6 {
     height: 300px;
   }
 }
-.svg-animation > img {
+
+.svg-map {
   position: absolute;
   left: 0;
-  top: 50%;
-  transform: translateY(-50%);
   min-width: 1920px;
+  min-height: 1920px;
+  width: 1920px;
+  height: 1920px;
+  max-width: 1920px;
+  max-height: 1920px;
+  z-index: 1;
 }
 @media (max-width: 1280px) {
-  .svg-animation > img {
+  .svg-map {
     min-width: 1280px;
-    top: 0;
+    min-height: 1280px;
+    width: 1280px;
+    height: 1280px;
+    max-width: 1280px;
+    max-height: 1280px;
     left: 50%;
     transform: translateX(-50%);
   }
 }
 @media (max-width: 767px) {
-  .svg-animation > img {
-    min-width: 150%;
-    width: auto;
+  .svg-map {
+    min-width: 1000px;
+    min-height: 1000px;
+    width: 1000px;
+    height: 1000px;
+    max-width: 1000px;
+    max-height: 1000px;
   }
+}
+@media (max-width: 500px) {
+  .svg-map {
+    min-width: 520px;
+    min-height: 520px;
+    width: 520px;
+    height: 520px;
+    max-width: 520px;
+    max-height: 520px;
+  }
+}
+.svg-map > svg {
+  width: 100%;
+}
+.svg-map .lines path {
+  opacity: 1;
+}
+
+.svg-items {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+}
+
+.svg-item {
+  position: absolute;
+}
+
+.svg-car {
+  width: 8%;
+  top: 48.6%;
+  left: 20%;
+}
+
+.svg-car2 {
+  width: 9%;
+  top: 44.5%;
+  left: 45.5%;
+}
+
+.svg-car3 {
+  width: 11%;
+  top: 25.5%;
+  left: 32%;
+}
+
+.svg-box {
+  width: 8%;
+  top: 39%;
+  left: 13%;
+}
+
+.svg-house {
+  width: 8%;
+  top: 31%;
+  left: 17%;
+}
+
+.svg-plane {
+  width: 13%;
+  top: 32%;
+  left: 43%;
+}
+
+.svg-ship {
+  width: 18%;
+  top: 36%;
+  left: 24.5%;
+}
+
+.svg-stand {
+  width: 14%;
+  top: 50%;
+  left: 33%;
+}
+
+.svg-house2 {
+  width: 8%;
+  top: 34%;
+  left: 55%;
+}
+
+.svg-car4 {
+  width: 9%;
+  top: 31.5%;
+  left: 64%;
+}
+
+.svg-car5 {
+  width: 11%;
+  top: 29%;
+  left: 71.5%;
+}
+
+.svg-cart {
+  width: 10%;
+  top: 50%;
+  left: 80%;
 }
 
 .offer {
