--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,8 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 1920px;
   max-height: 1920px;
   z-index: 1;
+  opacity: 0;
+  transition: opacity 0.5s ease;
 }
 @media (max-width: 1280px) {
   .svg-map {
@@ -544,8 +546,29 @@ h1, h2, h3, h4, h5, h6 {
 
 .svg-item {
   position: absolute;
+  transform: scale(0);
 }
 
+@keyframes svg-show {
+  0% {
+    transform: scale(0);
+  }
+  20% {
+    transform: scale(1.1);
+  }
+  40% {
+    transform: scale(0.93);
+  }
+  60% {
+    transform: scale(1.03);
+  }
+  80% {
+    transform: scale(0.99);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .svg-car {
   width: 8%;
   top: 48.6%;
