--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,7 @@ h1, h2, h3, h4, h5, h6 {
     max-width: 1280px;
     max-height: 1280px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) scale(1) !important;
   }
 }
 @media (max-width: 767px) {
