--- a/css/style.css
+++ b/css/style.css
@@ -530,8 +530,8 @@ h1, h2, h3, h4, h5, h6 {
 .svg-map > svg {
   width: 100%;
 }
-.svg-map .lines {
-  display: none;
+.svg-map .lines path {
+  opacity: 0.1;
 }
 
 .svg-items {
