--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,11 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 2;
 }
 
+.svg-path {
+  stroke-dasharray: 0 500 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5;
+  stroke-dashoffset: 0;
+}
+
 @keyframes svg-show {
   0% {
     transform: scale(0);
@@ -574,6 +579,14 @@ h1, h2, h3, h4, h5, h6 {
   }
   100% {
     transform: scale(1);
+  }
+}
+@keyframes svg-stroke {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  100% {
+    stroke-dashoffset: 500;
   }
 }
 .svg-item {
