--- a/css/style.css
+++ b/css/style.css
@@ -203,14 +203,15 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #ffffff;
   width: 39%;
   min-width: 300px;
-  min-height: 500px;
+  overflow: auto;
+  max-height: 90vh;
+  height: 500px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 60px 37px 60px 50px;
   box-shadow: 0px 6px 27px rgba(150, 150, 150, 0.25);
-  overflow: auto;
 }
 @media (max-width: 1023px) {
   .popup-callback {
@@ -244,6 +245,9 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-user-select: auto;
           user-select: auto;
   opacity: 1;
+}
+.popup-callback__form {
+  overflow: auto;
 }
 .popup-callback__title {
   margin-bottom: 30px;
@@ -298,13 +302,19 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #ffffff;
   width: 39%;
   min-width: 300px;
-  min-height: 500px;
+  overflow: auto;
+  max-height: 90vh;
+  height: 500px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 60px 37px 60px 50px;
   box-shadow: 0px 6px 27px rgba(150, 150, 150, 0.25);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 @media (max-width: 1023px) {
   .popup-thanks {
@@ -338,13 +348,6 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-user-select: auto;
           user-select: auto;
   opacity: 1;
-}
-.popup-thanks__main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  overflow: auto;
 }
 .popup-thanks__img {
   margin-bottom: 37px;
